--- a/main.css
+++ b/main.css
@@ -20,7 +20,8 @@ ul {
   
   /* Change the link color to #111 (black) on hover */
   li a:hover {
-    background-color: #393E46;
+    background-color: white; /* 393E46 */
+    color: #D65A31;
   }
 
   #page-container {
@@ -37,4 +38,13 @@ ul {
     bottom: 0;
     width: 100%;
     height: 2.5rem;            /* Footer height */
+  }
+
+  body {
+    background-color: black;
+    color: #D65A31
+  }
+
+  footer {
+    background-color: #393E46;
   }
