--- a/main.css
+++ b/main.css
@@ -38,6 +38,7 @@ ul {
     bottom: 0;
     width: 100%;
     height: 2.5rem;            /* Footer height */
+    background-color: #393E46;
   }
 
   body {
@@ -47,4 +48,8 @@ ul {
 
   footer {
     background-color: #393E46;
+  }
+
+  h1 {
+    text-align: center;
   }
