--- a/main.css
+++ b/main.css
@@ -39,15 +39,12 @@ ul {
     width: 100%;
     height: 2.5rem;            /* Footer height */
     background-color: #393E46;
+    text-align: center;
   }
 
   body {
     background-color: black;
     color: #D65A31
-  }
-
-  footer {
-    background-color: #393E46;
   }
 
   h1 {
