--- a/main.css
+++ b/main.css
@@ -50,3 +50,17 @@ ul {
   h1 {
     text-align: center;
   }
+
+  #start {
+    text-align: center;
+    animation: fade 1s ease-in 0s infinite alternate-reverse forwards;
+  }
+
+  @keyframes fade {
+    0% {
+      opacity: .25;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
