--- a/main.css
+++ b/main.css
@@ -51,6 +51,14 @@ ul {
     text-align: center;
   }
 
+  a {
+    color: white;
+  }
+
+  footer a {
+    color: #D65A31;
+  }
+
   #start {
     text-align: center;
     animation: fade 1s ease-in 0s infinite alternate-reverse forwards;
