--- a/main.css
+++ b/main.css
@@ -1,11 +1,13 @@
-ul {
+  ul {
     list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
+    border-radius: 25px;
     background-color: #D65A31;
+    margin: 0;
+    padding: 0px;
+    width: auto;
+    height: auto;
+    overflow: hidden;
   }
-  
   li {
     float: left;
   }
@@ -30,21 +32,23 @@ ul {
   }
   
   #content-wrap {
-    padding-bottom: 2.5rem;    /* Footer height */
+    padding-bottom: fit-content(20em);    /* Footer height [2.5rem][auto][fit-content(20em)]*/
   }
   
   #footer {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 2.5rem;            /* Footer height */
+    height: fit-content(20em);            /* Footer height */
     background-color: #393E46;
     text-align: center;
   }
 
   body {
+    font-family: sans-serif; /* [sans-serif][Papyrus] */
     background-color: black;
-    color: #D65A31
+    color: #D65A31;
+    text-align: center;
   }
 
   h1 {
