changed color from #d65a31 to aqua

--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,15 @@
 /** @format */
 
+/*
+Colors
+#d65a31 [orange]
+aqua 
+*/
+
 ul {
 	list-style-type: none;
 	border-radius: 25px;
-	background-color: #d65a31;
+	background-color: aqua;
 	margin: 1%;
 	padding: 0px;
 	width: auto;
@@ -27,11 +33,11 @@ ul li a {
 ul li a:hover {
 	background-color: white;
 	/* 393E46 */
-	color: #d65a31;
+	color: aqua;
 }
 
 hr #hr_test {
-	background-color: #d65a31;
+	background-color: aqua;
 	height: 2px;
 	border: none;
 }
@@ -62,7 +68,7 @@ body {
 	font-family: sans-serif;
 	/* [sans-serif][Papyrus] */
 	background-color: black;
-	color: #d65a31;
+	color: aqua; /* d65a31 */
 	text-align: center;
 }
 
@@ -75,7 +81,7 @@ a {
 }
 
 footer a {
-	color: #d65a31;
+	color: aqua;
 }
 
 #start {
