--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,7 @@ Colors
 aqua 
 */
 
+/* website */
 ul {
 	list-style-type: none;
 	border-radius: 25px;
@@ -64,11 +65,12 @@ hr #hr_test {
 }
 
 body {
-	cursor: url("/png/cool_pumpkin.png"), auto;
+	/*cursor: url("/png/cool_pumpkin.png"), auto;*/
 	font-family: sans-serif;
 	/* [sans-serif][Papyrus] */
 	background-color: black;
-	color: aqua; /* d65a31 */
+	color: aqua;
+	/* d65a31 */
 	text-align: center;
 }
 
@@ -97,4 +99,32 @@ footer a {
 	100% {
 		opacity: 1;
 	}
+}
+
+/* pong */
+@font-face {
+	font-family: customfont;
+	src: url("/custom fonts/SummerPixel22Regular-jE0W7.ttf");
+}
+
+#gameContainer {
+	font-family: "customfont";
+	text-align: center;
+}
+
+#gameBoard {
+	border: 3px solid;
+}
+
+#scoreText {
+	font-size: 100px;
+}
+
+#resetBtn {
+	font-size: 22px;
+	width: 100px;
+	height: 50px;
+	border: 4px solid;
+	border-radius: 15px;
+	cursor: pointer;
 }
