--- a/css/main.css
+++ b/css/main.css
@@ -68,7 +68,7 @@ body {
 	/*cursor: url("/png/cool_pumpkin.png"), auto;*/
 	font-family: sans-serif;
 	/* [sans-serif][Papyrus] */
-	background-color: black;
+	background-color: #252525;
 	color: aqua;
 	/* d65a31 */
 	text-align: center;
